/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

package ukama.events.v1;

message NodeOnlineEvent{
    string nodeId = 1;
    string nodeIp = 2;
    int32 nodePort = 3;
    string meshIp = 4;
    int32 meshPort = 5;
    string meshHostName = 6;
}

message NodeOfflineEvent{
    string nodeId = 1;
}
